2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py:
	(recursive_unset): add - it turns out gconf_client_recursive_unset()
	isn't wrapped either.
	
	* lib/sources/paneldelegate.py:
	(PanelDelegate.__commit_removed_changed): make it work.
	(run_unit_tests): make sure committing is actually doing something.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add PANEL_KEY_BASE.
	
	* lib/sources/paneldelegate.py: use it, instead of hardcoding
	/apps/panel - older versions use /apps/panel/profiles/default.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py:
	(associate_schema): gconf_engine_associate_schema() isn't wrapped, so
	use gconftool to do the job.
	(get_client_and_address_for_path): we want the address rather than
	engine now.
	
	* lib/sources/paneldelegate.py:
	(PanelDelegate.__handle_id_list_change): remove all the added/removed
	functions and do it generically here.
	(PanelDelegate.__copy_dir): implement.
	(PanelDelegate.__commit_removed_change),
	(PanelDelegate.__commit_added_change): use our cache of the id list
	rather than the schema default when committing the id list.
	(run_unit_tests: put Humpty together again.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py:
	(GConfSource.__get_client): rename to get_committing_client()
	and export. Also make it return a (client, engine) tupple.
	
	* lib/sources/paneldelegate.py:
	Store cached panel configuration in objects rather than tupples.
	Add added/removed flags for each panel/applet etc. If an applet
	has been added or removed, but that change not yet committed
	then these flags are set.
	(PanelDelegate.handle_change): filter out any changes to not
	yet committed added/removed panel/applets etc.
	(PanelDelegate.commit_change): first cut impl. Needs finishing,
	though.
	(run_unit_tests): update.

Thu Feb 10 18:33:48 CET 2005 Daniel Veillard <veillard@redhat.com>
